Utworzono za pomocą Colaboratory

--- a/Wizualizacja_py_Matejkowska_Lewandowska.ipynb
+++ b/Wizualizacja_py_Matejkowska_Lewandowska.ipynb
@@ -10,7 +10,7 @@
         "CUrtW7mBqT-q"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMmHtU0D5qNREPsupo1vMYG",
+      "authorship_tag": "ABX9TyMkwtfAydxbWZJpVHAwbIu0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,7 @@
       "source": [
         "#Projekt zaliczeniowy\n",
         "## **Wizualizacja danych sprzedażowych sieci sklepów *Drogeria* w języku Python tekst**\n",
+        "#Na podstawie analizy najbardziej dochodowych sklepów *Drogeria*\n",
         "##### Autorzy: Katarzyna Lewandowska, Justyna Matejkowska"
       ],
       "metadata": {
