--- a/Wizualizacja_py_Matejkowska_Lewandowska.ipynb
+++ b/Wizualizacja_py_Matejkowska_Lewandowska.ipynb
@@ -10,7 +10,7 @@
         "CUrtW7mBqT-q"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMkwtfAydxbWZJpVHAwbIu0",
+      "authorship_tag": "ABX9TyM1hjQsxH6QPpe8/G1J/upi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "source": [
         "#Projekt zaliczeniowy\n",
         "## **Wizualizacja danych sprzedażowych sieci sklepów *Drogeria* w języku Python tekst**\n",
-        "#Na podstawie analizy najbardziej dochodowych sklepów *Drogeria*\n",
+        "####Na podstawie analizy najbardziej dochodowych sklepów *Drogeria*\n",
         "##### Autorzy: Katarzyna Lewandowska, Justyna Matejkowska"
       ],
       "metadata": {
@@ -961,7 +961,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Sprzedaż sklepu numer 42"
+        "#Sprzedaż i Klienci w ciągu roku"
       ],
       "metadata": {
         "id": "JNTLqK0qjR-q"
