--- a/Wizualizacja_py_Matejkowska_Lewandowska.ipynb
+++ b/Wizualizacja_py_Matejkowska_Lewandowska.ipynb
@@ -10,7 +10,7 @@
         "O6kKM65VwGGo"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSWoHYxps6Phuv6aNZQMy1",
+      "authorship_tag": "ABX9TyNEzQYEjoZRlXcwg2ixdlRy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2236,13 +2236,352 @@
     {
       "cell_type": "code",
       "source": [
-        "shops3 = shops[(shops.sklep_id == 42 ) & (shops.czy_otwarty == 'Tak') ]"
+        "shops3 = shops[(shops.sklep_id == 42 ) & (shops.czy_otwarty == 'Tak') ]\n",
+        "shops3"
       ],
       "metadata": {
-        "id": "HLxd8LbXmsuA"
+        "id": "HLxd8LbXmsuA",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "outputId": "16ffc9bd-54c6-45a3-fa0e-0cb94988a341"
       },
-      "execution_count": 36,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       sklep_id  dzien_tyg     data  sprzedaz  liczba_klientow czy_otwarty  \\\n",
+              "35           42          3  2021-12      7395              780         Tak   \n",
+              "78           42          2  2021-12     13334             1324         Tak   \n",
+              "121          42          1  2021-12     11385             1140         Tak   \n",
+              "207          42          6  2021-12      7072              792         Tak   \n",
+              "336          42          3  2021-12      7297              812         Tak   \n",
+              "...         ...        ...      ...       ...              ...         ...   \n",
+              "16653        42          2  2021-07     13917             1397         Tak   \n",
+              "16703        42          1  2021-06     15086             1423         Tak   \n",
+              "16803        42          6  2021-04      8230              924         Tak   \n",
+              "16853        42          5  2021-03      9219             1054         Tak   \n",
+              "16903        42          4  2021-02      8478             1016         Tak   \n",
+              "\n",
+              "      czy_promocja czy_swieto czy_swieto_szkolne sklep_typ  sklep_asort  \\\n",
+              "35             Nie        Nie                Tak         a  Rozszerzony   \n",
+              "78             Nie        Nie                Tak         a  Rozszerzony   \n",
+              "121            Nie        Nie                Tak         a  Rozszerzony   \n",
+              "207            Nie        Nie                Nie         a  Rozszerzony   \n",
+              "336            Nie        Nie                Tak         a  Rozszerzony   \n",
+              "...            ...        ...                ...       ...          ...   \n",
+              "16653          Tak        Nie                Tak         a  Rozszerzony   \n",
+              "16703          Tak        Nie                Tak         a  Rozszerzony   \n",
+              "16803          Nie        Nie                Nie         a  Rozszerzony   \n",
+              "16853          Nie        Nie                Tak         a  Rozszerzony   \n",
+              "16903          Nie        Nie                Tak         a  Rozszerzony   \n",
+              "\n",
+              "       sklep_konkurencja  \n",
+              "35                   290  \n",
+              "78                   290  \n",
+              "121                  290  \n",
+              "207                  290  \n",
+              "336                  290  \n",
+              "...                  ...  \n",
+              "16653                290  \n",
+              "16703                290  \n",
+              "16803                290  \n",
+              "16853                290  \n",
+              "16903                290  \n",
+              "\n",
+              "[302 rows x 12 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-aec5a149-0958-439b-a55f-9d4193d73b51\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sklep_id</th>\n",
+              "      <th>dzien_tyg</th>\n",
+              "      <th>data</th>\n",
+              "      <th>sprzedaz</th>\n",
+              "      <th>liczba_klientow</th>\n",
+              "      <th>czy_otwarty</th>\n",
+              "      <th>czy_promocja</th>\n",
+              "      <th>czy_swieto</th>\n",
+              "      <th>czy_swieto_szkolne</th>\n",
+              "      <th>sklep_typ</th>\n",
+              "      <th>sklep_asort</th>\n",
+              "      <th>sklep_konkurencja</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>35</th>\n",
+              "      <td>42</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2021-12</td>\n",
+              "      <td>7395</td>\n",
+              "      <td>780</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>78</th>\n",
+              "      <td>42</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2021-12</td>\n",
+              "      <td>13334</td>\n",
+              "      <td>1324</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>121</th>\n",
+              "      <td>42</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2021-12</td>\n",
+              "      <td>11385</td>\n",
+              "      <td>1140</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>207</th>\n",
+              "      <td>42</td>\n",
+              "      <td>6</td>\n",
+              "      <td>2021-12</td>\n",
+              "      <td>7072</td>\n",
+              "      <td>792</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>336</th>\n",
+              "      <td>42</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2021-12</td>\n",
+              "      <td>7297</td>\n",
+              "      <td>812</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16653</th>\n",
+              "      <td>42</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2021-07</td>\n",
+              "      <td>13917</td>\n",
+              "      <td>1397</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16703</th>\n",
+              "      <td>42</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2021-06</td>\n",
+              "      <td>15086</td>\n",
+              "      <td>1423</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16803</th>\n",
+              "      <td>42</td>\n",
+              "      <td>6</td>\n",
+              "      <td>2021-04</td>\n",
+              "      <td>8230</td>\n",
+              "      <td>924</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16853</th>\n",
+              "      <td>42</td>\n",
+              "      <td>5</td>\n",
+              "      <td>2021-03</td>\n",
+              "      <td>9219</td>\n",
+              "      <td>1054</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16903</th>\n",
+              "      <td>42</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2021-02</td>\n",
+              "      <td>8478</td>\n",
+              "      <td>1016</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Nie</td>\n",
+              "      <td>Tak</td>\n",
+              "      <td>a</td>\n",
+              "      <td>Rozszerzony</td>\n",
+              "      <td>290</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>302 rows × 12 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aec5a149-0958-439b-a55f-9d4193d73b51')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-aec5a149-0958-439b-a55f-9d4193d73b51 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-aec5a149-0958-439b-a55f-9d4193d73b51');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "markdown",
