Utworzono za pomocą Colaboratory

--- a/Wizualizacja_py_Matejkowska_Lewandowska_z_komentarzami.ipynb
+++ b/Wizualizacja_py_Matejkowska_Lewandowska_z_komentarzami.ipynb
@@ -10,7 +10,7 @@
         "O6kKM65VwGGo"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPzGSHmKJBWWxWKlSjNgwSr",
+      "authorship_tag": "ABX9TyMf/fLBg4smLyK5I0PjfVPn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -641,7 +641,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> Najbardziej dochodowym sklepem wśród sklepów Drogeria jest sklep numer 42. Co ciekawe, sprzedaż w sklepie numer 35 a sklepem konkurencyjnym, jest podobna, ale wciąż wyższa od sprzedaży konkurencji.\n",
+        "> Najbardziej dochodowym sklepem wśród sklepów Drogeria jest sklep numer 42. Co ciekawe, sprzedaż w sklepie numer 35 a sklepem konkurencyjnym jest podobna, ale wciąż wyższa od sprzedaży konkurencji.\n",
         "\n",
         "\n",
         "\n",
