Utworzono za pomocą Colaboratory

--- a/Wizualizacja_py_Matejkowska_Lewandowska_z_komentarzami.ipynb
+++ b/Wizualizacja_py_Matejkowska_Lewandowska_z_komentarzami.ipynb
@@ -10,7 +10,7 @@
         "O6kKM65VwGGo"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMf/fLBg4smLyK5I0PjfVPn",
+      "authorship_tag": "ABX9TyPEKcpzCA45KLD2EuDx0Vry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1075,7 +1075,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> Klienci w sklepie nr 42 najczęściej robią zakupy za około 100 zł. \n",
+        "> Klienci w sklepie numer 42 robią najczęściej zakupy za około 100 zł. \n",
         "\n"
       ],
       "metadata": {
