Utworzono za pomocą Colaboratory

--- a/Wizualizacja_py_Matejkowska_Lewandowska_z_komentarzami.ipynb
+++ b/Wizualizacja_py_Matejkowska_Lewandowska_z_komentarzami.ipynb
@@ -10,7 +10,7 @@
         "O6kKM65VwGGo"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPEKcpzCA45KLD2EuDx0Vry",
+      "authorship_tag": "ABX9TyMqbtQ19gO5eeG+dFqy/xzx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2261,7 +2261,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> W styczniu, lutym, marcu, wrześniu i listopadzie sprzedaż w sklepie nr 42 jest skorelowana z liczbą Klientów, natomiast w maju oraz grudniu korelacja nie występuje.\n",
+        "> W styczniu, lutym, marcu, wrześniu i listopadzie sprzedaż w sklepie numer 42 jest skorelowana z liczbą Klientów, natomiast w maju oraz grudniu korelacja nie występuje.\n",
         "\n"
       ],
       "metadata": {
@@ -2684,7 +2684,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> W sklepie nr 42, w poniedziałek, gdy występuje promocja, sprzedaż jest największa w ciąu tygodnia. Promocja jest wprowadzana od poniedziałku do piątku, z wyjątkiem soboty.\n",
+        "> W sklepie nr 42, w poniedziałek, gdy występuje promocja, sprzedaż jest największa w ciągu tygodnia. Promocja jest wprowadzana od poniedziałku do piątku, z wyjątkiem soboty.\n",
         "\n"
       ],
       "metadata": {
@@ -2937,7 +2937,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> W sklepie nr 42 największa sprzedaż występuje w poniedziałek. Kształtuje się na podobnym poziomie w ciągu tygodnia.\n"
+        "> W sklepie numer 42 największa sprzedaż występuje w poniedziałek. Kształtuje się na podobnym poziomie w ciągu tygodnia.\n"
       ],
       "metadata": {
         "id": "IisfKVv6J8AZ"
